--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,9 @@
             android:theme="@style/Theme.MovieApp.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".home.HomeActivity"/>
+                android:value="com.mualim.movieapp.ui.home.HomeActivity"/>
         </activity>
-        <activity android:name=".home.HomeActivity">
+        <activity android:name="com.mualim.movieapp.ui.home.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
