--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.20"
+    ext.kotlin_version = "1.4.30"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
+        classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -30,13 +30,18 @@ ext {
     appCompatVersion = '1.2.0'
     coreVersion = '1.3.2'
     contraitLayoutVersion = '2.0.4'
-    junitVersion = '4.13.1'
+    junitVersion = '4.13.2'
     junitExtversion = '1.1.2'
     espressoVersion = '3.3.0'
     androidTestVersion = '1.3.0'
-    androidXTestVersion = '1.2.0'
+    androidCoreTestVersion = '2.1.0'
+    mockitoVersion = '3.6.0'
+    mockitoKotlinVersion = '2.2.0'
+    idleResourceVersion = '3.3.0'
 
-    materialVersion = '1.2.1'
-    recylerViewVersion = '1.1.0'
-    glideVersion = '4.11.0'
+    materialVersion = '1.3.0'
+    recylerViewVersion = '1.2.0'
+    glideVersion = '4.12.0'
+
+    archLifecycleVersion = '2.2.0'
 }
